set up firebase in project

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ngo_app_ui">
+    package="com.example.ngo_app">
    <application
-        android:label="ngo_app_ui"
+        android:label="ngo_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
