--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-    "cSpell.words": [
-        "Kiran",
-        "Nashik"
-    ],
-    "cmake.sourceDirectory": "${workspaceFolder}/linux"
+  "cSpell.words": ["Kiran", "Nashik"],
+  "cmake.sourceDirectory": "${workspaceFolder}/linux",
+  "java.configuration.updateBuildConfiguration": "disabled"
 }
