--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,13 @@ dependencies:
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.3.1
   fluttertoast: ^8.1.2
+  shared_preferences: ^2.0.17
   http: ^0.13.5
+  provider: ^6.0.5
   circular_bottom_navigation: ^2.3.0
   flutter_image_slideshow: ^0.1.4
-  # http: ^0.13.5
+  country_picker: ^2.0.19
+  pinput: ^2.2.12
 
 dev_dependencies:
   flutter_test:
