--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,17 +35,26 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  # firebase packages
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.5
   cloud_firestore: ^4.3.1
+  firebase_storage: ^11.0.11
+
+  # for msgs, warning notifiers
   fluttertoast: ^8.1.2
+
   shared_preferences: ^2.0.17
   http: ^0.13.5
   provider: ^6.0.5
-  circular_bottom_navigation: ^2.3.0
+  # slideshow on homepage
   flutter_image_slideshow: ^0.1.4
+
   country_picker: ^2.0.19
-  pinput: ^2.2.12
+
+  image_picker: ^0.8.6+1
+  image_cropper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
