--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,11 @@ dependencies:
   image_picker: ^0.8.6+1
   image_cropper: ^3.0.1
 
+  # geotagging
+  geolocator: ^9.0.2
+  geocoding: ^2.0.5
+  screenshot: ^1.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
