--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,6 @@ dependencies:
   # for msgs, warning notifiers
   fluttertoast: ^8.1.2
 
-  shared_preferences: ^2.0.17
-  http: ^0.13.5
-  provider: ^6.0.5
   # slideshow on homepage
   flutter_image_slideshow: ^0.1.4
 
@@ -60,6 +57,10 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.0.5
   screenshot: ^1.3.0
+
+  # payment gateway
+  razorpay_flutter: ^1.3.4
+  http:
 
 dev_dependencies:
   flutter_test:
