--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.0.5
   screenshot: ^1.3.0
+  google_maps_flutter: ^2.2.5
 
   # payment gateway
   razorpay_flutter: ^1.3.4
